fix navbar overflow in home menu

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,5 @@
 .container {
   background-color: #fff;
   font-family: 'Noto Sans JP', sans-serif;
+  overflow-x: hidden;
 }
